# semantik2

./: README.md  README.rst
semantik/: pyproject.toml
semantik/core/: composable.py  js_generating.py  resolve.py  type.py
semantik/generate/: code.py  component.py  composition.py  encoder.py  generate.py  javascript.py
semantik/test/: basic.py
semantik/utils/: auto_importer.py  cases.py  classproperty.py  errors.py  html_and_view_tags.py
